--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ python = "^3.8"
 flask = "^1.1.2"
 black = "^19.10b0"
 pylint = "^2.5.2"
+psycopg2 = "^2.8.5"
+SQLAlchemy = "^1.3.17"
+flask-restful = "^0.3.8"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
