--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ pylint = "^2.5.2"
 psycopg2 = "^2.8.5"
 SQLAlchemy = "^1.3.17"
 flask-restful = "^0.3.8"
+requests = "^2.24.0"
+beautifulsoup4 = "^4.9.1"
+tqdm = "^4.46.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
