--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ python-dotenv = "^0.13.0"
 Flask-SQLAlchemy = "^2.4.3"
 flask-marshmallow = "^0.13.0"
 marshmallow-sqlalchemy = "^0.23.1"
+flask_cors = "^3.0.8"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
