--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,12 @@
         "react": "^16.13.1",
         "react-bootstrap": "^1.0.1",
         "react-dom": "^16.13.1",
+        "react-loader-spinner": "^3.1.14",
+        "react-promise-tracker": "^2.1.0",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "^3.4.1"
+        "react-scripts": "^3.4.1",
+        "react-spinners": "^0.9.0"
     },
     "scripts": {
         "start": "react-scripts start",
