--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ flask-marshmallow = "^0.13.0"
 marshmallow-sqlalchemy = "^0.23.1"
 flask_cors = "^3.0.8"
 pylint-flask = "^0.6"
-flask-praetorian = "^1.0.0"
+flask-praetorian = { git = "https://github.com/dusktreader/flask-praetorian" }
 flask-buzz = "^0.1.15"
 
 [tool.poetry.dev-dependencies]
