--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ marshmallow-sqlalchemy = "^0.23.1"
 flask_cors = "^3.0.8"
 pylint-flask = "^0.6"
 flask-buzz = "^0.1.15"
+pendulum = "2.0.5"
 flask-praetorian = {git = "https://github.com/dusktreader/flask-praetorian"}
 
 [tool.poetry.dev-dependencies]
