--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,14 @@
         "react": "^16.13.1",
         "react-bootstrap": "^1.0.1",
         "react-cookie": "^4.0.3",
+        "react-dnd": "^5.0.0",
+        "react-dnd-html5-backend": "^3.0.2",
         "react-dom": "^16.13.1",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "^3.4.1",
-        "react-star-ratings": "^2.3.0"
+        "react-star-ratings": "^2.3.0",
+        "react-tag-input": "^6.4.3"
     },
     "scripts": {
         "start": "react-scripts start",
