--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,11 @@
     "private": true,
     "dependencies": {
         "bootstrap": "^4.5.0",
+        "moment": "^2.27.0",
         "react": "^16.13.1",
         "react-bootstrap": "^1.0.1",
         "react-cookie": "^4.0.3",
+        "react-datetime": "^2.16.3",
         "react-dnd": "^5.0.0",
         "react-dnd-html5-backend": "^3.0.2",
         "react-dom": "^16.13.1",
