--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "^3.4.1",
-        "react-star-ratings": "^2.3.0"
+        "react-star-ratings": "^2.3.0",
+        "react-toastify": "^6.0.8"
     },
     "scripts": {
         "start": "react-scripts start",
