--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
         "react-bootstrap-table": "^4.3.1",
         "react-bootstrap-table-next": "^4.0.3",
         "react-bootstrap-table2-paginator": "^2.1.2",
+        "react-bootstrap-table2-toolkit": "^2.1.3",
         "react-cookie": "^4.0.3",
         "react-datetime": "^2.16.3",
         "react-dnd": "^5.0.0",
