--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
         "react-dnd": "^5.0.0",
         "react-dnd-html5-backend": "^3.0.2",
         "react-dom": "^16.13.1",
+        "react-kawaii": "^0.16.0",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "^3.4.1",
