--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ numpy = "^1.19.1"
 scikit-learn = "^0.23.1"
 nltk = "^3.5"
 pyarrow = "^1.0.0"
+isbnlib = "^3.10.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
