--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
         "react-dom": "^16.13.1",
         "react-icons": "^3.10.0",
         "react-kawaii": "^0.16.0",
+        "react-password-strength": "^2.4.0",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "^3.4.1",
