--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ nltk = "^3.5"
 pyarrow = "^1.0.0"
 colorama = "^0.4.3"
 isbnlib = "^3.10.3"
+pyreadline = "^2.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
